substrate/primitives/api/test/tests/ui/impl_two_traits_with_same_name.stderr
error: Two traits with the same name detected! The trait name is used to generate its ID. Please rename one trait at the declaration!
  --> tests/ui/impl_two_traits_with_same_name.rs:41:15
   |
41 |     impl second::Api<Block> for Runtime {
   |                  ^^^
